--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -34,9 +34,8 @@ server {
     }
 
     location ~ \.php$ {
-        limit_req zone=mapas burst=20 nodelay;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass mapasculturais:9000;
+        fastcgi_pass mapas:9000;
         fastcgi_index index.php;
         fastcgi_read_timeout 3600;
         include fastcgi_params;
