--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -10,14 +10,14 @@ services:
     ports:
       - "8080:80"
     depends_on:
-      - mapasculturais
+      - mapas
     links:
-      - mapasculturais
+      - mapas
     networks:
       - mapaservices
 
-  mapasculturais:
-    image: secultceara/mapasculturais:homolog
+  mapas:
+    image: secultceara/mapasculturais:latest
     restart: unless-stopped
     env_file:
       - .env
@@ -38,6 +38,21 @@ services:
     networks:
       - mapaservices
 
+  db:
+    image: secultceara/postgres:14
+    restart: unless-stopped
+    environment:
+      - POSTGRES_PASSWORD=mapas
+      - POSTGRES_USER=mapas
+      - POSTGRES_DB=mapas
+    ports:
+      - "5432:5432"
+    networks:
+      - mapaservices
+    volumes:
+      # - /home/franciscooliveira/dev/mapas/docker-data/db-data:/var/lib/postgresql/data
+      - /home/juin/dev/mapa5/docker-data/db-data:/var/lib/postgresql/data
+      
   redis:
     image: redis:6
     command: --maxmemory 1256Mb --maxmemory-policy allkeys-lru
