Atualiza docker-compose, variáveis de ambiente e README

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,34 @@
+APP_MODE=production
 LOG_LEVEL=DEBUG
 LOG_ENABLED=true
+CEP_TOKEN="1a61e4d00bf9c6a85e3b696ef7014372"
 
-CEP_TOKEN=""
+# Configuração do banco de dados
+DB_PORT=5432
+DB_HOST=db
+DB_NAME=mapasculturais
+DB_USER=mapasculturais
+DB_PASS=mapasculturais
 
-MAILER_USER=""
-MAILER_SERVER=""
-MAILER_PROTOCOL=""
-MAILER_PORT=""
-MAILER_PASS=""
-MAILER_FROM=""
+# Configuração de disparo de e-mail
+MAILER_USER=
+MAILER_SERVER=
+MAILER_PROTOCOL=
+MAILER_PORT=587
+MAILER_PASS=
+MAILER_FROM=
 
-GTM_TAG=
+# As chaves abaixo são de desenvolvimento, precisam ser substituidas em ambiente de produção
+GOOGLE_RECAPTCHA_SITEKEY='6Lcft7ErAAAAAIDDChuKQmyHOE0dhMU1guVZkoF-'
+GOOGLE_RECAPTCHA_SECRET='6Lcft7ErAAAAAMfP--4RYfuIQ92TyBjis5gxgqtm'
 
-GOOGLE_RECAPTCHA_SITEKEY='6LdOs7kmAAAAAAIKmWv2FAJnCgPAKqDiuYZikFbY'
-GOOGLE_RECAPTCHA_SECRET='6LdOs7kmAAAAAAieecdoQmL7amqoB4-hrM6K88Zw'
+PENDING_PCACHE_RECREATION_INTERVAL=1
+JOBS_INTERVAL=1
 
-AUTH_GOOGLE_VISIBLE=true
-AUTH_GOOGLE_CLIENT_SECRET=
-AUTH_GOOGLE_CLIENT_ID=
+REDIS_CACHE=redis
+SESSIONS_SAVE_PATH=tcp://sessions:6379
+
+# Aumento de memória para aumentar velocidade de carregamento da rota de agentes
+PHP_INI_SET=[{"API agent/find":{"memory_limit":"256M"}}]
 
 
-PORT_DB=5432
-HOST_DB=db
-NAME_DB=mapas
-USER_DB=mapas
-PASSWORD_DB=mapas
