--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,3 +1,12 @@
+#limit_req_zone $binary_remote_addr zone=mapas:10m rate=5r/s;
+
+# Se estiver atrás de um proxy ou load balancer
+# limit_req_zone $http_x_forwarded_for zone=mapas:10m rate=5r/s;
+
+# Referência de como configurar uma allow list de ip's que nao serão restringidos.
+# https://serverfault.com/questions/177461/how-to-rate-limit-in-nginx-but-including-excluding-certain-ip-addresses
+
+
 server {
     listen 80;
     server_tokens off;
@@ -5,7 +14,7 @@ server {
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
-    
+
     error_log /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
 
@@ -17,7 +26,7 @@ server {
         index index.php index.html;
         try_files $uri $uri/ /index.php?$args;
     }
-    
+
     location ~ /files/.*\.php$ {
         deny all;
         return 403;
@@ -34,8 +43,9 @@ server {
     }
 
     location ~ \.php$ {
+        #limit_req zone=mapas burst=20 nodelay;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass mapas:9000;
+        fastcgi_pass mapasculturais:9000;
         fastcgi_index index.php;
         fastcgi_read_timeout 3600;
         include fastcgi_params;
@@ -44,5 +54,6 @@ server {
     }
 
     charset utf-8;
-
 }
+
+
