feat(branding): update site title to "Mapa Cultural de BelÃ©m"

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -22,6 +22,11 @@ server {
 
     root /var/www/html;
 
+    # Inject brand head elements and metadata into all HTML responses
+    sub_filter_types text/html;
+    sub_filter_once on;
+    sub_filter '</head>' '<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">\n<style>\n  :root{\n    --font-heading:\'Montserrat\',system-ui,sans-serif;\n    --font-body:\'Inter\',system-ui,sans-serif;\n  }\n  h1,h2,h3,.heading{font-family:var(--font-heading)}\n  body,p,li{font-family:var(--font-body)}\n</style>\n<link rel="manifest" href="/site.webmanifest">\n<link rel="apple-touch-icon" sizes="180x180" href="/public/brand/apple-touch-icon.png">\n<link rel="icon" type="image/png" sizes="32x32" href="/public/brand/favicon-32x32.png">\n<link rel="icon" type="image/png" sizes="48x48" href="/public/brand/favicon-48x48.png">\n<meta name="theme-color" content="#263868">\n<link rel="stylesheet" href="/public/brand/brand.css">\n<script>(function(){try{document.title = "Mapa Cultural de Belém"; if(location.pathname==="/" ){ var h=document.querySelector("h1"); if(h){ h.textContent = "Mapa Cultural de Belém"; h.classList.add("header-slogan"); } }}catch(e){}})();</script></head>';
+
     location / {
         index index.php index.html;
         try_files $uri $uri/ /index.php?$args;
